# StreamVox

./: package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_apps.rs  audio_capture.rs  main.rs
src/components/: ServerControl.tsx
