[package]
name = "streamvox"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winapi = { version = "0.3.9", features = ["combaseapi", "objbase", "coml2api", "functiondiscoverykeys_devpkey", "mmdeviceapi", "propsys", "winerror", "winuser", "wingdi", "winbase"] }
widestring = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
